--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
             <h4>Website:</h4>
             <a href="https://portfolio.wills-ooi.com"
               >https://portfolio.wills-ooi.com</a
-            >
-            <a href="https://github.com/OoiBP">https://github.com/OoiBP</a>
+            ><br />
+            <a href="https://github.com/OoiBP">https://github.com/OoiBP</a
+            ><br />
             <a href="https://ooibp.github.io">https://ooibp.github.io</a>
           </div>
           <div class="skills">
@@ -72,6 +73,16 @@
             </div>
             <div class="skill-group">
               <div class="skill-item">Teaching</div>
+              <div class="skill-scale">
+                <div class="fill"></div>
+                <div class="fill"></div>
+                <div class="fill"></div>
+                <div class="fill"></div>
+                <div class="fill"></div>
+              </div>
+            </div>
+            <div class="skill-group">
+              <div class="skill-item">Go language</div>
               <div class="skill-scale">
                 <div class="fill"></div>
                 <div class="fill"></div>
@@ -201,16 +212,6 @@
               </div>
             </div>
             <div class="skill-group">
-              <div class="skill-item">Go language</div>
-              <div class="skill-scale">
-                <div class="fill"></div>
-                <div class="fill"></div>
-                <div class="fill"></div>
-                <div class="nofill"></div>
-                <div class="nofill"></div>
-              </div>
-            </div>
-            <div class="skill-group">
               <div class="skill-item">R language</div>
               <div class="skill-scale">
                 <div class="fill"></div>
@@ -255,7 +256,27 @@
               </div>
             </div>
             <div class="skill-group">
-              <div class="skill-item">SQL</div>
+              <div class="skill-item">PostgreSQL</div>
+              <div class="skill-scale">
+                <div class="fill"></div>
+                <div class="fill"></div>
+                <div class="fill"></div>
+                <div class="fill"></div>
+                <div class="nofill"></div>
+              </div>
+            </div>
+            <div class="skill-group">
+              <div class="skill-item">MySQL</div>
+              <div class="skill-scale">
+                <div class="fill"></div>
+                <div class="fill"></div>
+                <div class="fill"></div>
+                <div class="fill"></div>
+                <div class="nofill"></div>
+              </div>
+            </div>
+            <div class="skill-group">
+              <div class="skill-item">Docker</div>
               <div class="skill-scale">
                 <div class="fill"></div>
                 <div class="fill"></div>
@@ -390,19 +411,20 @@
               <p>2020/09 - current</p>
               <ul>
                 <li>
-                  Develop monitoring system for industrial IOT application.
+                  Develop integration system for industrial internet of things
+                  (IIoT) application.
                 </li>
                 <li>
                   Design scalable web application with microservices
                   architecture.
                 </li>
                 <li>
-                  Layout MySQL database schema for optimized performance and
+                  Layout SQL database schema for optimized performance and
                   reliability.
                 </li>
                 <li>
-                  Develop backend integration based on the client's requirements
-                  and specifications.
+                  Develop backend integration with customer's manufacturing
+                  execution system (MES).
                 </li>
                 <li>
                   Design and enhance user interface (UI) for webpage and
@@ -413,7 +435,7 @@
                   programming and user supports.
                 </li>
                 <li>Contribute to all phases of the development life cycle.</li>
-                <li>Onsite installation & training.</li>
+                <li>Onsite installation & provide user support training.</li>
               </ul>
             </div>
             <div class="work-group">
